--- a/GravityFalls/GravityFalls.vcxproj.filters
+++ b/GravityFalls/GravityFalls.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="WorkTimer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="structs.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
